[gd_scene load_steps=2 format=3 uid="uid://b4qn04y8uvra4"]

[ext_resource type="Script" path="res://scripts/server.gd" id="1_0lsox"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0lsox")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
metadata/_edit_use_anchors_ = true

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2

[node name="HostMenu" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="host" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/HostMenu"]
layout_mode = 0
offset_left = 293.5
offset_top = 97.0
offset_right = 399.5
offset_bottom = 155.0
theme_override_font_sizes/font_size = 40
text = "HOST"

[node name="Ip" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/HostMenu"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 172.0
offset_top = 184.0
offset_right = 392.0
offset_bottom = 226.0
theme_override_font_sizes/font_size = 28

[node name="copy" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/HostMenu"]
layout_mode = 2
offset_left = 432.0
offset_top = 188.0
offset_right = 489.0
offset_bottom = 224.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Copy
"

[node name="btnHost" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/HostMenu"]
layout_mode = 0
offset_left = 171.5
offset_top = 263.0
offset_right = 521.5
offset_bottom = 313.0
theme_override_font_sizes/font_size = 30
text = "Host"

[node name="JoinMenu" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="btnJoin" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/JoinMenu"]
layout_mode = 0
offset_left = 629.5
offset_top = 210.0
offset_right = 979.5
offset_bottom = 260.0
theme_override_font_sizes/font_size = 30
text = "Join"

[node name="joinIP" type="LineEdit" parent="MarginContainer/HSplitContainer/VBoxContainer/JoinMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 695.0
offset_top = 135.0
offset_right = 915.0
offset_bottom = 178.0
theme_override_font_sizes/font_size = 21
placeholder_text = "IP Address"
alignment = 1

[node name="join" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/JoinMenu"]
layout_mode = 0
offset_left = 762.0
offset_top = 44.0
offset_right = 848.0
offset_bottom = 102.0
rotation = -0.000146832
theme_override_font_sizes/font_size = 40
text = "JOIN"

[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/HostMenu/copy" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/HostMenu/btnHost" to="." method="_on_btn_host_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/JoinMenu/btnJoin" to="." method="_on_btn_join_pressed"]
